
public enum Group
{
    Enemy,
    Ally,
    All
}