
public enum Scope
{
    One,
    All,
    Self
}
