using System.Collections.Generic;
using UnityEngine;

public class Deck : ScriptableObject
{
    public List<CardType> Cards;
}
