
public interface Effect
{
    void Apply(Member source, Target target);
}
